@@ -1,0 +1,9 @@
+﻿using System;
+
+namespace Gilgame.SEWorkbench.Configuration
+{
+    public static class TextEditor
+    {
+
+    }
+}
