@@ -1,0 +1,29 @@
+﻿<Window x:Class="Gilgame.SEWorkbench.Views.RenameDialog"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Title="New Name - Space Engineers Workbench" Height="115" Width="500" ResizeMode="NoResize"
+        WindowStartupLocation="CenterOwner" KeyDown="Window_KeyDown" Icon="/Gilgame.SEWorkbench;component/Icons/app.ico"
+        Loaded="Window_Loaded">
+    <Grid Background="#FF2B3B58" FocusManager.FocusedElement="{Binding ElementName=NameTextBox}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="33" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <Grid Background="#FFCFD6E5" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2">
+            <TextBlock Text="Name:" Margin="5,5,350,5" VerticalAlignment="Center" />
+            <TextBox Margin="155,5,5,5" Text="{Binding ItemName, Mode=TwoWay}" Name="NameTextBox"
+                     PreviewTextInput="NameTextBox_PreviewTextInput"
+                     PreviewKeyDown="NameTextBox_PreviewKeyDown" />
+        </Grid>
+
+        <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+            <Button Margin="5,5,0,7" Width="75" Height="23" Content="Add" Grid.Column="1" Grid.Row="2" Click="AddButton_Click" />
+            <Button Margin="5,5,10,7" Width="75" Height="23" Content="Cancel" Grid.Column="1" Grid.Row="2" Click="CancelButton_Click" />
+        </StackPanel>
+    </Grid>
+</Window>
